--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 Ciąża trwa około 180 dni. Młode po urodzeniu samodzielnie wspina się na grzbiet matki, sierść noworodka ma taką samą strukturę i barwę jak matki,
                 dzięki czemu jest słabo widoczne dla drapieżników. Młode jest karmione mlekiem matki przez 6 miesięcy. Po dwóch latach uzyskuje samodzielność.</p>
         </section>
+
+        <section>
+            <h2>Lampart</h2>
+            <img src="./img/lampart.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio maxime explicabo ea. Cupiditate maxime repudiandae incidunt quibusdam nisi ut iure harum alias dicta eius, illum, necessitatibus officia consectetur perferendis et.</p>
+        </section>
     </main>
     <footer>Projekt WSB 2025</footer>
 </body>
